[gd_scene load_steps=4 format=3 uid="uid://q8qbubqehap6"]

[ext_resource type="Script" path="res://Scripts/Game/game.gd" id="1_gc7fg"]
[ext_resource type="Theme" uid="uid://f51fjewexp7e" path="res://Themes/BLANK_GRID.theme" id="2_1u4if"]
[ext_resource type="Texture2D" uid="uid://dh1sknqws38ky" path="res://Assets/Cells/cell54x54.png" id="3_idkhv"]

[node name="Level_1" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_gc7fg")

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 245.0
offset_right = 112.0
offset_bottom = 307.0
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 10

[node name="Button" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button2" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button3" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button4" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button5" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button6" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button7" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button8" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button9" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button10" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button11" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button12" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button13" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button14" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button15" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button16" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button17" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button18" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button19" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button20" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button21" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button22" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button23" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button24" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button25" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button26" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button27" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button28" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button29" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button30" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button31" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button32" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button33" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button34" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button35" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button36" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button37" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button38" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button39" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button40" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button41" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button42" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button43" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button44" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button45" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button46" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button47" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button48" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button49" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button50" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button51" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button52" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button53" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button54" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button55" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button56" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button57" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button58" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button59" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button60" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button61" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button62" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button63" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button64" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button65" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button66" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button67" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button68" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button69" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button70" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button71" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button72" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button73" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button74" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button75" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button76" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button77" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button78" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button79" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button80" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button81" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button82" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button83" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button84" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button85" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button86" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button87" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button88" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button89" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button90" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button91" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button92" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button93" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button94" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button95" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button96" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button97" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button98" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button99" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="Button100" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_1u4if")
icon = ExtResource("3_idkhv")

[node name="PreviewZone" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 50.0
offset_top = 881.0
offset_right = 90.0
offset_bottom = 921.0

[node name="Preview" type="TextureRect" parent="PreviewZone"]
layout_mode = 2
offset_left = 94.0
offset_top = 95.0
offset_right = 94.0
offset_bottom = 95.0
scale = Vector2(0.5, 0.5)
pivot_offset = Vector2(0, 1)

[node name="Preview2" type="TextureRect" parent="PreviewZone"]
layout_mode = 2
offset_left = 310.0
offset_top = 101.0
offset_right = 310.0
offset_bottom = 101.0
scale = Vector2(0.5, 0.5)

[node name="Preview3" type="TextureRect" parent="PreviewZone"]
layout_mode = 2
offset_left = 524.0
offset_top = 101.0
offset_right = 524.0
offset_bottom = 101.0
scale = Vector2(0.5, 0.5)
